--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,7 +9,7 @@ numpy==1.23.5
 packaging==21.3
 parametrized==0.1
 Pillow==9.3.0
-psycopg2==2.9.5
+psycopg2-binary
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
